--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,18 @@
 <!doctype html>
 <html lang="en">
   <head>
+  
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+
+  <!-- ✅ Add this to load Mermaid globally -->
+    <script type="module">
+      import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs";
+      window.mermaid = mermaid;
+    </script>
+
   </head>
   <body>
     <div id="root"></div>
